--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -35,6 +35,7 @@ jobs:
           echo "export DOCS_DIR=${{ inputs.docsdir }}" >> .run.env
           echo "export VLLM_EXTRA_ARGS=\"${{ inputs.vllm_extra_args }}\"" >> .run.env
           echo "export TRANSFORMERS_OFFLINE=1" >> .run.env
+          echo "export TIKTOKEN_ENCODINGS_BASE=/root/.cache/tiktoken_encodings" >> .run.env
 
       - name: Install Singularity Compose
         if: ${{ inputs.runmode == 'singularity' }}
@@ -91,6 +92,15 @@ jobs:
           fi
 
           echo Singularity container pull step complete.
+      - name: Pull Tiktoken Encodings
+        if: ${{ inputs.advanced_settings.tiktoken_encodings == true }}
+        early-cancel: any-job-failed
+        run: |
+          set -x
+          cd ${{ inputs.rundir }}
+          mkdir -p cache/tiktoken_encodings
+          wget -O cache/tiktoken_encodings/o200k_base.tiktoken "https://openaipublic.blob.core.windows.net/encodings/o200k_base.tiktoken"
+          wget -O cache/tiktoken_encodings/cl100k_base.tiktoken "https://openaipublic.blob.core.windows.net/encodings/cl100k_base.tiktoken"
 
   slurm_job:
     needs:
@@ -126,7 +136,17 @@ jobs:
           echo "touch job.started" >> run.sh
           echo "hostname >> HOSTNAME" >> run.sh
 
-          echo "module load singularity" >> run.sh
+          # load singularity via module if not already in path
+          cat << 'EOF' >> run.sh
+          # Ensure Singularity is available
+          if ! command -v singularity >/dev/null 2>&1; then
+            if command -v module >/dev/null 2>&1; then
+              module load singularity || module load apptainer
+            else
+              echo "ERROR: singularity/apptainer not found" >&2
+            fi
+          fi
+          EOF
                     
           cat start_service.sh >> run.sh
       - name: Submit SLURM Script
@@ -586,3 +606,8 @@ jobs:
             type: string
             label: Repository Branch
             default: nemotron
+          tiktoken_encodings:
+            label: Pull Tiktoken Encodings
+            tooltip: For GPT-OSS pull the tiktoken encodings.
+            type: boolean
+            default: false
