Removing bad char

--- a/singularity/env.sh.example
+++ b/singularity/env.sh.example
@@ -32,7 +32,7 @@ export CXX=/usr/bin/g++
 export TMPDIR=${PWD}/tmp
 export CUDA_CACHE_PATH=${TMPDIR}/cuda_cache
 export TORCH_EXTENSIONS_DIR=${TMPDIR}/torch_extensions
-export FLASHINFER_JIT_DIR=${TMPDIR}/flashinfer_jitß
+export FLASHINFER_JIT_DIR=${TMPDIR}/flashinfer_jit
 
 # Other VLLM tuning settings
 export VLLM_LOGGING_LEVEL=INFO
