--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -257,7 +257,7 @@ jobs:
             label: Singularity
       rundir:
         label: Run Directory
-        default: ~/pw/activate-rag-vllm
+        default: ${HOME}/pw/activate-rag-vllm
         type: string
       runtype:
         label: Run Type
@@ -397,3 +397,50 @@ jobs:
             type: editor
             tooltip: Type the PBS scheduler directives
             ignore: ${{ inputs.resource.schedulerType != 'pbs' || inputs.scheduler == false }}
+      advanced_settings:
+        type: group
+        label: Advanced Settings
+        collapsed: true
+        items:
+          repository:
+            type: string
+            label: Repository
+            default: https://github.com/parallelworks/activate-rag-vllm.git
+          repository_branch:
+            type: string
+            label: Repository Branch
+            default: alvaro/dev
+          tiktoken_encodings:
+            label: Pull Encodings
+            tooltip: For GPT-OSS pull the tiktoken encodings.
+            type: boolean
+            default: false
+          vllm_attention_backend:
+            type: dropdown
+            label: VLLM Attention Backend
+            default: TRITON_ATTN
+            tooltip: Select the attention backend implementation used by vLLM
+            options:
+              - value: FLASH_ATTN
+              - value: TRITON_ATTN
+              - value: ROCM_ATTN
+              - value: ROCM_AITER_MLA
+              - value: ROCM_AITER_TRITON_MLA
+              - value: ROCM_AITER_FA
+              - value: ROCM_AITER_MLA_SPARSE
+              - value: TORCH_SDPA
+              - value: FLASHINFER
+              - value: FLASHINFER_MLA
+              - value: TRITON_MLA
+              - value: CUTLASS_MLA
+              - value: FLASHMLA
+              - value: FLASHMLA_SPARSE
+              - value: FLASH_ATTN_MLA
+              - value: PALLAS
+              - value: IPEX
+              - value: NO_ATTENTION
+              - value: FLEX_ATTENTION
+              - value: TREE_ATTN
+              - value: ROCM_AITER_UNIFIED_ATTN
+              - value: CPU_ATTN
+              - value: CUSTOM
